fixed the results area from overlapping with grid

--- a/css/media.css
+++ b/css/media.css
@@ -38,4 +38,9 @@
     .spacer{
         height: 150px;
     }
+
+    #results-area{
+        height: 300px;
+        width: 230px;
+    }
 }
